# living-doc-py

./: .envrc  .gitignore  DEMO-GLOSSARY-AS-LIST.md  DEMO-GLOSSARY-AS-TABLE.md  DEMO-GLOSSARY.xlsx  GLOSSARY.md  Makefile  README.md  USAGE.md  pyproject.toml  pytest.ini
.github/workflows/: github-actions-packaging.yml  github-actions-tests.yml  github-actions.yml
bidding/: entities.py  value_objects.py
bidding/tests/: test_listing.py
docs/: README.adoc
living_doc/: annotations.py  app.py  glossary_strategy.py  living_glossary.py  sample_entities.py
living_doc/tests/: sample_entities.py  test_find_glossary_concepts_from_decorator.py  test_glossary_annotation.py  test_present_concepts_in_a_glossary.py
living_doc/tests/features/: tutorial.feature
living_doc/tests/features/steps/: features.py
