[project]
name = "living_doc_py"
description = "to poke living-documentation concepts in Python"
dynamic = ["version"]
authors = [{ name = "Mehdi Houacine", email = "mehdihouacine7@gmail.com" }]
dependencies = ['click >= 8.1.3', 'xlsxwriter >= 3.1.0']

[project.optional-dependencies]
tests = ['pytest >= 7.3.1']
dev = ['black', 'ruff >= 0.0.262', "setuptools_scm[toml]>=6.2", 'build >= 0.10.0', "wheel"]

[tool.setuptools]
packages = ["living_doc"]

[tool.setuptools_scm]
write_to = "living_doc/_version.py"

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
living-glossary = "living_doc.app:cli"

[tool.pytest.ini_options]
testpaths = "living_doc/tests/"

[tool.ruff]
select = ["E", "F"]
ignore = ["E501"]
