[tool.poetry]
name = "living-doc-py"
version = "0.1.0"
description = ""
authors = ["Mehdi-H <mehdihouacine7@gmail.com>"]
readme = "README.md"
packages = [{include = "living_doc"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
xlsxwriter = "^3.1.0"



[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
build = "^0.10.0"
ruff = "^0.0.270"
wheel = "^0.40.0"
twine = "^4.0.2"
setuptools-scm = {extras = ["toml"], version = "^7.1.0"}


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
behave = "^1.2.6"
behave-html-pretty-formatter = "^1.9.1"

[tool.setuptools]
packages = ["living_doc"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "living_doc/_version.py"

[tool.ruff]
select = ["E", "F"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
